{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 49,
  "lineage": "3b1415d2-9283-d6ce-2f99-789719ebb98b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "testmg-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1b33d000-1e51-4f67-9e88-c25a2587f429/resourceGroups/Mgarika-Sandbox/providers/Microsoft.Network/networkInterfaces/testmg-nic",
            "internal_domain_name_suffix": "fdjkyaqyql3etbgkrvhs1fzrif.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/1b33d000-1e51-4f67-9e88-c25a2587f429/resourceGroups/Mgarika-Sandbox/providers/Microsoft.Network/publicIPAddresses/testmg_public_ip",
                "subnet_id": "/subscriptions/1b33d000-1e51-4f67-9e88-c25a2587f429/resourceGroups/Mgarika-Sandbox/providers/Microsoft.Network/virtualNetworks/mgtest-network/subnets/Web-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-1B-CC-11",
            "name": "testmg-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "Mgarika-Sandbox",
            "virtual_machine_id": "/subscriptions/1b33d000-1e51-4f67-9e88-c25a2587f429/resourceGroups/Mgarika-Sandbox/providers/Microsoft.Compute/virtualMachines/Web-linux-vm"
          },
          "dependencies": [
            "azurerm_public_ip.testmg_public_ip",
            "azurerm_resource_group.TFchallenge",
            "azurerm_subnet.testmg-subnet1",
            "azurerm_virtual_network.testmg-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm3-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1b33d000-1e51-4f67-9e88-c25a2587f429/resourceGroups/Mgarika-Sandbox/providers/Microsoft.Network/networkInterfaces/Jumpbox-nic",
            "internal_domain_name_suffix": "fdjkyaqyql3etbgkrvhs1fzrif.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1b33d000-1e51-4f67-9e88-c25a2587f429/resourceGroups/Mgarika-Sandbox/providers/Microsoft.Network/virtualNetworks/mgtest-network/subnets/Jumpbox-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-10-D1-83",
            "name": "Jumpbox-nic",
            "private_ip_address": "10.123.3.4",
            "private_ip_addresses": [
              "10.123.3.4"
            ],
            "resource_group_name": "Mgarika-Sandbox",
            "virtual_machine_id": "/subscriptions/1b33d000-1e51-4f67-9e88-c25a2587f429/resourceGroups/Mgarika-Sandbox/providers/Microsoft.Compute/virtualMachines/Jumpbox-vm"
          },
          "dependencies": [
            "azurerm_resource_group.TFchallenge",
            "azurerm_subnet.testmg-subnet3",
            "azurerm_virtual_network.testmg-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "testmg-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1b33d000-1e51-4f67-9e88-c25a2587f429/resourceGroups/Mgarika-Sandbox/providers/Microsoft.Network/networkSecurityGroups/testmg-sg",
            "location": "eastus",
            "name": "testmg-sg",
            "resource_group_name": "Mgarika-Sandbox",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Testmg-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.TFchallenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "testmg-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/1b33d000-1e51-4f67-9e88-c25a2587f429/resourceGroups/Mgarika-Sandbox/providers/Microsoft.Network/networkSecurityGroups/testmg-sg/securityRules/Testmg-dev-rule",
            "name": "Testmg-dev-rule",
            "network_security_group_name": "testmg-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "Mgarika-Sandbox",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.testmg-sg",
            "azurerm_resource_group.TFchallenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "testmg_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/1b33d000-1e51-4f67-9e88-c25a2587f429/resourceGroups/Mgarika-Sandbox/providers/Microsoft.Network/publicIPAddresses/testmg_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.191.176.168",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "testmg_public_ip",
            "resource_group_name": "Mgarika-Sandbox",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.TFchallenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "testmg-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1b33d000-1e51-4f67-9e88-c25a2587f429/resourceGroups/Mgarika-Sandbox/providers/Microsoft.Network/virtualNetworks/mgtest-network/subnets/Web-subnet",
            "name": "Web-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Mgarika-Sandbox",
            "virtual_network_name": "mgtest-network"
          },
          "dependencies": [
            "azurerm_resource_group.TFchallenge",
            "azurerm_virtual_network.testmg-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "testmg-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1b33d000-1e51-4f67-9e88-c25a2587f429/resourceGroups/Mgarika-Sandbox/providers/Microsoft.Network/virtualNetworks/mgtest-network/subnets/Data-subnet",
            "name": "Data-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Mgarika-Sandbox",
            "virtual_network_name": "mgtest-network"
          },
          "dependencies": [
            "azurerm_resource_group.TFchallenge",
            "azurerm_virtual_network.testmg-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "testmg-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1b33d000-1e51-4f67-9e88-c25a2587f429/resourceGroups/Mgarika-Sandbox/providers/Microsoft.Network/virtualNetworks/mgtest-network/subnets/Jumpbox-subnet",
            "name": "Jumpbox-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Mgarika-Sandbox",
            "virtual_network_name": "mgtest-network"
          },
          "dependencies": [
            "azurerm_resource_group.TFchallenge",
            "azurerm_virtual_network.testmg-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "testmg-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "02acd228-8218-49fa-84ca-8d4f2d973145",
            "id": "/subscriptions/1b33d000-1e51-4f67-9e88-c25a2587f429/resourceGroups/Mgarika-Sandbox/providers/Microsoft.Network/virtualNetworks/mgtest-network",
            "location": "eastus",
            "name": "mgtest-network",
            "resource_group_name": "Mgarika-Sandbox",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/1b33d000-1e51-4f67-9e88-c25a2587f429/resourceGroups/Mgarika-Sandbox/providers/Microsoft.Network/virtualNetworks/mgtest-network/subnets/Web-subnet",
                "name": "Web-subnet"
              },
              {
                "address_prefix": "10.123.2.0/24",
                "id": "/subscriptions/1b33d000-1e51-4f67-9e88-c25a2587f429/resourceGroups/Mgarika-Sandbox/providers/Microsoft.Network/virtualNetworks/mgtest-network/subnets/Data-subnet",
                "name": "Data-subnet"
              },
              {
                "address_prefix": "10.123.3.0/24",
                "id": "/subscriptions/1b33d000-1e51-4f67-9e88-c25a2587f429/resourceGroups/Mgarika-Sandbox/providers/Microsoft.Network/virtualNetworks/mgtest-network/subnets/Jumpbox-subnet",
                "name": "Jumpbox-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.TFchallenge"
          ]
        }
      ]
    }
  ]
}